Update netex-java-model to 2.0.15, code refactoring, test updated, flyway script updated