@@ -1,5 +1,6 @@
 package org.rutebanken.tiamat.netex.mapping.mapper;
 
+import jakarta.xml.bind.JAXBElement;
 import ma.glasnost.orika.CustomMapper;
 import ma.glasnost.orika.MappingContext;
 import org.rutebanken.netex.model.GroupOfTariffZones;
@@ -13,9 +14,10 @@ public class GroupOfTariffZonesMapper extends CustomMapper<GroupOfTariffZones, o
     @Override
     public void mapAtoB(GroupOfTariffZones netexGroupOfTariffZones, org.rutebanken.tiamat.model.GroupOfTariffZones tiamatGroupOfTariffZones, MappingContext context) {
         super.mapAtoB(netexGroupOfTariffZones, tiamatGroupOfTariffZones, context);
-        if (netexGroupOfTariffZones.getMembers() != null && !netexGroupOfTariffZones.getMembers().getTariffZoneRef().isEmpty()) {
-            final List<TariffZoneRef> tiamatTariffZoneRefList = netexGroupOfTariffZones.getMembers().getTariffZoneRef().stream()
-                    .map(tzr -> new TariffZoneRef(tzr.getRef())).collect(Collectors.toList());
+        if (netexGroupOfTariffZones.getMembers() != null && !netexGroupOfTariffZones.getMembers().getTariffZoneRef_().isEmpty()) {
+            final List<TariffZoneRef> tiamatTariffZoneRefList = netexGroupOfTariffZones.getMembers().getTariffZoneRef_().stream()
+                    .map(JAXBElement::getValue)
+                    .map(tzr -> new TariffZoneRef(tzr.getRef())).toList();
 
             tiamatGroupOfTariffZones.getMembers().addAll(tiamatTariffZoneRefList);
         }
